# Cadencia

./: .gitignore  README.md  cadencia-backend-plan.md  cadencia-frontend-plan.md  cadencia-phase1-antigravity-prompt.md
A-TOA/a2a-treasury/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  demo.py  demo_acf.py  docker-compose.prod.yml  docker-compose.yml  project_summary.md  pyproject.toml  pyrightconfig.json  requirements.txt  sim_verify.txt
A-TOA/a2a-treasury/a2a_protocol/: __init__.py  agent_card.py  task_manager.py
A-TOA/a2a-treasury/agents/: buyer_agent.py  multi_party_session.py  neutral_agent.py  pipeline.py  seller_agent.py
A-TOA/a2a-treasury/api/: dependencies.py  main.py  middleware.py
A-TOA/a2a-treasury/blockchain/: algo_client.py  algokit.toml  contract_client.py  escrow_contract.py  escrow_manager.py  payment_handler.py  sdk_client.py  simulation.py
A-TOA/a2a-treasury/compliance/: fema_engine.py  fema_records.py  rbi_codes.py
A-TOA/a2a-treasury/core/: anchor_service.py  flexibility_tracker.py  fx_engine.py  guardrails.py  llm_reasoning.py  merkle.py  merkle_service.py  state_machine.py  strategy.py  valuation.py  webhook_notifier.py  x402_handler.py
A-TOA/a2a-treasury/dashboard/: __init__.py  router.py
A-TOA/a2a-treasury/db/: audit_logger.py  database.py  models.py  redis_client.py
A-TOA/a2a-treasury/framework/: __init__.py
A-TOA/a2a-treasury/scripts/: compile_contract.py  seed_demo_accounts.py
A-TOA/a2a-treasury/tests/: conftest.py  test_a2a_task_manager.py  test_audit_logger.py  test_auth.py  test_enterprise.py  (+10 more)
(+146 files in other folders)
