[project]
name = "a2a-treasury"
version = "0.5.0"
description = "A2A Treasury Network - Agentic Commerce Framework"
requires-python = ">=3.11"

[tool.pyright]
root = "."
pythonVersion = "3.12"
pythonPlatform = "Windows"
pythonPath = "C:/Users/Shreyas/AppData/Local/Programs/Python/Python312/python.exe"
extraPaths = [
  ".",
  "C:/Users/Shreyas/AppData/Local/Programs/Python/Python312/Lib/site-packages",
]
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingModuleSource = "none"
reportOptionalMemberAccess = "none"
reportOptionalSubscript = "none"
reportOptionalCall = "none"
reportOptionalIterable = "none"
reportGeneralTypeIssues = "none"
reportCallIssue = "none"
reportArgumentType = "none"
reportReturnType = "none"
reportIndexIssue = "none"
reportOperatorIssue = "none"

[tool.pyre]
search_path = ["."]
source_directories = [
  "a2a_protocol",
  "agents",
  "api",
  "blockchain",
  "compliance",
  "core",
  "dashboard",
  "db",
  "framework",
  "treasury",
  "tests"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
